BA-1040 and BA-1041

--- a/environments/.env.development
+++ b/environments/.env.development
@@ -1,1 +1,2 @@
 U_CUP_2024_DATABASE_DSN="mysql+mysqlconnector://admin:admin@localhost/u_cup_2024"
+SA_CUP_24_DATABASE_DSN="mysql+mysqlconnector://admin:admin@localhost/sa_cup_24"
